# AlgovizAdventure

./: .gitignore  ActiveGameObjects.hpp  AlgoWrapper.hpp  AttackAnimator.hpp  CMakeLists.txt  Config.hpp  ConfigParser.hpp  Ease.hpp  Engine.hpp  GAME.ipynb  GTime.hpp  GameComponent.cpp  GameComponent.h  GameComponent.hpp  GameInitializer.hpp  GameLoop.hpp  GameObject.hpp  InputMap.hpp  JavaScript.hpp  JupyterInteraction.js  Level.hpp  LevelBuilder.hpp  LevelParser.hpp  Logger.hpp  ObjectStructure.hpp  Prefabs.hpp  Roomlink.hpp  Vector2.hpp  test.cpp  test.h  thisisatest.txt  utils.cpp
audioSystem/: AudioPlayer.hpp
components/: AStarController.hpp  AttackAnimator.hpp  Attacker.hpp  AudioManager.hpp  BasicAi.hpp  ChangeSpriteOnMove.hpp  CircleRenderer.hpp  EntityScript.hpp  Health.hpp  HolyDoc.hpp  InputController.hpp  Level.hpp  LevelParser.hpp  Movement.hpp  PathRenderer.hpp  PlayerCollider.hpp  PlayerInputController.hpp  PlayerScript.hpp  Position.hpp  RandomController.hpp  RegenItem.hpp  RoomLink.hpp  SpriteRenderer.hpp  UI.hpp  WallComponent.hpp
components/abstract/: Collider.hpp  EntityController.hpp  Renderer.hpp  Weapon.hpp
documentation/: CreateEnemyExample.hpp  CreateTestComponent.hpp  CreateWall.hpp  EngineDocumentation.md  UtilsAndDatastructures.md  level_guidelines.txt
engine/: ActiveGameObjects.hpp  Engine.hpp  GameComponent.hpp  GameObject.hpp
examples/: CreateEnemyExample.hpp  CreateTestComponent.hpp
gameObjects/: Player.hpp
level/: 01.level  02.level  03.level  04.level  05.level  06.level  07.level  end.level  start.level  test01.level  test02.level  test_01.level  test_02.level
levelSystem/: Level.hpp  LevelBuilder.hpp  LevelParser.hpp  Roomlink.hpp  SpecialLevelSymbols.hpp
pathing/: Node.hpp  PathFinder.hpp
